# Shapey-Tower

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  settings.cfg
assets/shaders/: fire.fs
include/: achievements.h  audio.h  collectibles.h  constants.h  daily_challenge.h  debug.h  difficulty.h  game.h  input.h  leaderboard.h  localization.h  parallax.h  particles.h  persistence.h  platform.h  player.h  rng.h  screen_shake.h  settings.h  shadows.h  stats.h  theme.h  tutorial.h  ui_helpers.h  video_constants.h  video_settings.h
resources/: appicon.rc
src/: audio.cpp  collectibles.cpp  game.cpp  game_render.cpp  game_ui_menu.cpp  game_ui_pause.cpp  input.cpp  leaderboard.cpp  localization.cpp  macos_icon.mm  main.cpp  persistence.cpp  platform.cpp  player.cpp  settings.cpp  shadows.cpp  stats.cpp  theme.cpp  tutorial.cpp  video_settings.cpp  win_icon.cpp
